[project]
name = "griptape-nodes-library-gtn-video-edit-tools"
version = "0.3.0"
description = "GTN Video Edit Tools for Griptape Nodes - frame extraction, video blending, and video color matching"
authors = [
    { name = "Griptape Community" }
]
requires-python = ">=3.11"
dependencies = [
    "imageio[ffmpeg]>=2.37.0",
    "numpy>=1.26.0",
    "color-matcher",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
